# BlockchainFoodOrder

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  package.json  swanky.config.json
.github/workflows/: tests.yaml
artifacts/flipper/: flipper.contract  flipper.json
artifacts/fooddelivery/: fooddelivery.contract  fooddelivery.json
artifacts/foodorder/: foodorder.contract  foodorder.json
artifacts/foodorder_v1/: foodorder.json
contracts/fooddelivery/: Cargo.toml
contracts/fooddelivery/logics/: Cargo.toml
contracts/fooddelivery/logics/impls/: courier_service.rs  customer_service.rs  manager_service.rs  mod.rs  payment_service.rs  restaurant_service.rs  types.rs
contracts/fooddelivery/logics/macros/: Cargo.toml  lib.rs
contracts/fooddelivery/logics/traits/: customer_service.rs  mod.rs  payment_service.rs  restaurant_service.rs
contracts/fooddelivery/proxy/: Cargo.toml
contracts/fooddelivery/src/: lib.rs
contracts/foodorder/: Cargo.toml
contracts/foodorder/crud-macro/: Cargo.toml
contracts/foodorder/crud-macro/src/: lib.rs
contracts/foodorder/logic/: Cargo.toml  lib.rs
contracts/foodorder/logic/helpers/: helpers.rs
contracts/foodorder/logic/impls/: courier_service.rs  customer_service.rs  data.rs  get_service.rs  manager_service.rs  mod.rs  payment_service.rs  restaurant_service.rs  shared.rs  types.rs
contracts/foodorder/logic/traits/: courier_service.rs  customer_service.rs  events.rs  get_service.rs  manager_service.rs  mod.rs  payment_service.rs  random.rs  restaurant_service.rs
contracts/foodorder/logics/: Cargo.toml
contracts/foodorder/logics/helpers/: helpers.rs
contracts/foodorder/logics/impls/: courier_service.rs  customer_service.rs  get_service.rs  manager_service.rs  mod.rs  payment_service.rs  restaurant_service.rs  types.rs
contracts/foodorder/logics/macros/: Cargo.toml  lib.rs
contracts/foodorder/logics/traits/: courier_service.rs  customer_service.rs  get_service.rs  manager_service.rs  mod.rs  payment_service.rs  restaurant_service.rs
contracts/foodorder/proxy/: lib.rs
contracts/foodorder/src/: lib.rs
tests/fooddelivery/: index.test.ts
tests/fooddelivery/artifacts/: fooddelivery.contract  fooddelivery.json
tests/fooddelivery/testReports/: mochawesome.html
tests/foodorder/: index.test.ts  upgradeable.test.ts
tests/foodorder/artifacts/: foodorder.contract  foodorder.json
tests/foodorder/testReports/: mochawesome.html
typedContracts/fooddelivery/build-extrinsic/: fooddelivery.ts
typedContracts/fooddelivery/constructors/: fooddelivery.ts
typedContracts/fooddelivery/contract-info/: fooddelivery.ts
typedContracts/fooddelivery/contracts/: fooddelivery.ts
typedContracts/fooddelivery/data/: fooddelivery.json
typedContracts/fooddelivery/event-types/: fooddelivery.ts
typedContracts/fooddelivery/events/: fooddelivery.ts
typedContracts/fooddelivery/mixed-methods/: fooddelivery.ts
typedContracts/fooddelivery/query/: fooddelivery.ts
typedContracts/fooddelivery/tx-sign-and-send/: fooddelivery.ts
typedContracts/fooddelivery/types-arguments/: fooddelivery.ts
typedContracts/fooddelivery/types-returns/: fooddelivery.ts
typedContracts/foodorder/build-extrinsic/: foodorder.ts
typedContracts/foodorder/constructors/: foodorder.ts
typedContracts/foodorder/contract-info/: foodorder.ts
typedContracts/foodorder/contracts/: foodorder.ts
typedContracts/foodorder/data/: foodorder.json
typedContracts/foodorder/event-data/: foodorder.json
typedContracts/foodorder/event-types/: foodorder.ts
typedContracts/foodorder/events/: foodorder.ts
typedContracts/foodorder/mixed-methods/: foodorder.ts
typedContracts/foodorder/query/: foodorder.ts
typedContracts/foodorder/tx-sign-and-send/: foodorder.ts
typedContracts/foodorder/types-arguments/: foodorder.ts
typedContracts/foodorder/types-returns/: foodorder.ts
typedContracts/foodorder_v1/event-types/: foodorder.ts
typedContracts/foodorder_v1/mixed-methods/: foodorder.ts
typedContracts/foodorder_v1/types-returns/: foodorder.ts
