[package]
name = "foodorder"
version = "1.0.0"
authors = ["Alan Boyd <alancameronboyd@gmail.com>"]
edition = "2021"

[dependencies]
ink = { version = "4.3.0", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = [
    "derive",
] }
scale-info = { version = "2.6", default-features = false, features = [
    "derive",
], optional = true }

openbrush = { git = "https://github.com/Brushfam/openbrush-contracts", tag = "4.0.0-beta.1", default-features = false, features = ["psp22", "ownable", "access_control", "upgradeable"] }

logic = { path = "logic", default-features = false, features = []}

[dev-dependencies]
ink_e2e = "4.3.0"

[lib]
name = "foodorder"
path = "src/lib.rs"

[features]
default = ["std"]
std = ["ink/std", "scale/std", "scale-info/std", "openbrush/std", "logic/std"]
ink-as-dependency = []
e2e-tests = []

[profile.release] 
overflow-checks = false
codegen-units = 16
opt-level = 3

