[package]
name = "crud-macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = { version = "1", features = ["nightly"] }
quote = "1"
syn = { version = "2", features = ["fold", "full"] }

[lib]
proc-macro = true

[features]